2012-11-16	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* schedule.cc: Walk-to-schedule caused instances of the sit-on-air bug because
	  it would teleport the NPC if off-screen and leave him/her sitting/lying down.
	* actors.cc: Fixed another case of potential sit-on-air source.
	* exult.cc: Fixed buildmap guard band issue.

2012-11-19 Dominik Reichardt <dominus@users.sourceforge.net>
	* exult.cc: added command line option to reset the video settings (patch by 
	  Malignant Manor).
	* win32/exult_installer.iss: "reset video settings" shortcut to the Exult 
	  Start Menu group on Windows (again thanks to Malignant Manor).
	  
2012-11-16	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* imagewin/scale_xbr.*: Performance improvements for NxBR scalers.

2012-11-11 Dominik Reichardt <dominus@users.sourceforge.net>
	* varios files: added data/bg|si/autonotes.txt to game flx bundles and the 
	  misc option to toggle it.
	
2012-11-11 Dominik Reichardt <dominus@users.sourceforge.net>
	* gumps/Notebook_gump.cc: when cheating show location of notes in the notebook.
	  
2012-10-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* tools/gnome_shp_thumbnailer.cc: Eliminated deprecation warning.
	* content/bgkeyring/*: Finally fixed forging of blacksword, courtesy of
	  Malignant Manor.
	* imagewin/scale_xbr: Added option (by editing the .h file) to use other
	  variants of the algorithm (but still defaulting to Zenju's version, as it
	  looks best). Changed color metric to a Manhattan metric over RGB space for
	  a small speed boost without visual loss.
	* paths.cc: Fixed opening crates through wall in Monitor store.
	* All others: Fixed sitting on air/sleeping on ground bugs. Fixed a few
	  schedule-related segfaults due to using objects after they have been
	  deleted by more throughly stopping NPCs when offscreen (may have some
	  side-effects, needs testing).

2012-11-08 Dominik Reichardt <dominus@users.sourceforge.net>